# cash

./: .prettierignore  .release-plase-config.json  .release-please-config.json  CHANGELOG.md  drizzle.config.ts  package.json
.github/workflows/: build-check.yml  cleanup-branches.yml  mac-os.yml  publish.yml  release.yml  test-release.yml
scripts/: sync-versions.js  sync-versions.ts
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_bent_living_mummy.sql  0001_third_energizer.sql  0002_brave_inertia.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
src-tauri/src/: drizzle_proxy.rs  lib.rs  main.rs
src/lib/: updater.ts  utils.ts
src/lib/components/: app-sidebar.svelte  data-table.svelte
src/lib/components/data-grid/: context.ts  data-grid-column-header.svelte  data-grid-container.svelte  data-grid-pagination.svelte  data-grid.svelte  types.ts
src/lib/db/: database.ts  seed.ts
src/lib/hooks/: use-frecency.svelte.ts
src/lib/stores/: init.ts
src/lib/utils/: casing.ts  is-letter.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/categories/: +page.svelte  category-form.svelte  cell-name.svelte  cell-parent.svelte  cell-system.svelte  cell-type.svelte  columns.ts  schema.ts
src/routes/institutions/: +page.svelte  cell-account-count.svelte  cell-badge.svelte  cell-country.svelte  cell-name.svelte  columns.ts  institutions-form.svelte  schema.ts
(+62 files in other folders)
