[package]
name = "cash"
version = "0.0.1"
description = "A Tauri App"
authors = ["diegopluna"]
edition = "2021"
license=""
repository=""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.9.3", features = [] }
tauri-plugin-sql = { version = "2.3.1", features = ["sqlite"] }
tauri-plugin-updater = { version = "2.9.0", features = ["rustls-tls" ] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-svelte = "3.1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
incremental = false
